' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Auto" {
  * id: integer <<generated>>
  --
  * version: integer
  * Fahrgestellnummer: text
  * art: text
  * preis: number
  * lieferbar: boolean
    datum: date
  * **bezeichnung_id**: integer <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Bezeichnung" {
  * id: integer <<generated>>
  --
  * bezeichnung: text
  * zusatz: text
  * **auto_id**: integer <<FK>>
}

entity "Zubehoer" {
  * id: integer <<generated>>
  --
  * name: text
    beschreibung: text
  * **auto_id**: integer <<FK>>
}

Auto ||..|| Bezeichnung
Auto ||..|| Zubehoer

@enduml
